--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
     </style>
 </head>
 <body>
-
 <div class="container">
     <h1>Juan Salinas</h1>
     <div class="contact-info">
-        <p>LinkedIn: https://www.linkedin.com/in/juan-salinas/</p>
+        <a href="https://www.linkedin.com/in/juan-salinas/" target="_blank">Visita mi perfil de LinkedIn</a>
     </div>
 
     <div class="section">
         <h2>Perfil Profesional</h2>
-        <p>Profesional de Ingeniería de Sistemas, con más de 9 años de experiencia en áreas de tecnologías de información. Actualmente lidero el equipo de Insurance Data & Analytics en Scotiabank, además desempeño un rol de consultoría y docencia en Cloud Computing, Big Data & Analytics.</p>
+        <p>Profesional de Ingeniería de Sistemas, con más de 9 años de experiencia en áreas de tecnologías de información. Actualmente lidero 
+            el equipo de Insurance Data & Analytics en Scotiabank, además desempeño un rol de consultoría y docencia en Cloud Computing, Big Data & Analytics.</p>
     </div>
 
     <div class="section">
@@ -88,6 +88,5 @@
         </ul>
     </div>
 </div>
-
 </body>
 </html>
