--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Juan Salinas</h1>
+        <h1>Juan Salinas Ponce</h1>
         <div class="contact-info">
             <a href="https://www.linkedin.com/in/juan-salinas/" target="_blank">Visita mi perfil de LinkedIn</a>
         </div>
